Fix z-index of db status box.

--- a/app/static/screen.css
+++ b/app/static/screen.css
@@ -66,6 +66,8 @@ div.top div.status {
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
     padding: 4px 10px 4px 10px;
+    position: relative;
+    z-index: 1;
 }
 
 div.top, div.item {
